2013-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* type-break.el (type-break-file-name):
	* textmodes/remember.el (remember-data-file):
	* strokes.el (strokes-file):
	* shadowfile.el (shadow-initialize):
	* saveplace.el (save-place-file):
	* ps-bdf.el (bdf-cache-file):
	* progmodes/idlwave.el (idlwave-config-directory):
	* net/quickurl.el (quickurl-url-file):
	* international/kkc.el (kkc-init-file-name):
	* ido.el (ido-save-directory-list-file):
	* emulation/viper.el (viper-custom-file-name):
	* emulation/vip.el (vip-startup-file):
	* calendar/todo-mode.el (todo-file-do, todo-file-done, todo-file-top):
	* calendar/timeclock.el (timeclock-file): Use locate-user-emacs-file.

2013-03-12  Paul Eggert  <eggert@cs.ucla.edu>

	Switch encodings of tutorials, thai-word to UTF-8 (Bug#13880).
	* language/thai-word.el: Switch to UTF-8.

2013-03-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* recentf.el (recentf-save-file): Use locate-user-emacs-file (bug#13870).

2013-03-11  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* net/net-utils.el (net-utils-remove-ctrl-m-filter):
	Use with-current-buffer and don't move point.
	(net-utils-run-simple): Remove useless code.
	(net-utils-remove-ctl-m): Remove unused custom.

2013-03-11  Per Starbäck  <starback@stp.lingfil.uu.se>

	* international/characters.el (glyphless-set-char-table-range): New fun.
	(update-glyphless-char-display): Use it (bug#13744).

2013-03-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* progmodes/cfengine.el: Update for CFEngine 3.4.2 and higher:
	namespaces in the syntax, indent closer for hanging brace
	correctly, allow single-quote delimited 'strings', and make
	`cfengine3-mode' the default.

2013-03-11  Jean-Philippe Gravel  <jpgravel@gmail.com>

	* progmodes/gdb-mi.el: Speed up initialization (bug#10580).
	Use lexical-binding.  Fix up docstring according to conventions.
	(gdbmi-debug-mode): New var.
	(gdbmi-start-with, gdbmi-same-start, gdbmi-is-number, gdbmi-bnf-init)